Create start.d/*.ini for [ini-template]
* Will always create ini file if
  the module is enabled directly
  or via transitive dependency
  AND it has a [ini-template] section.